tests/rascal/negative/type_errors/L1/18_expression_ES10_D4_82.ob
MODULE Test18;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               q := ((((0 + z) DIV (0 * 1)) < 1223) OR (((1223 DIV 200) * (x DIV x)) >= (1 + y)));
               p := (r OR ((y > (200 * y)) OR (y <= (1 * 2))));
               y := (- (2 - ((1 - 0) - 200)));
               r := (~ (~ ((0 DIV 1223) < z)));
               y := (+ ((200 DIV 1223) - 2));
               r := ((x MOD (200 + (1223 MOD z))) > 2);
               x := (- 0);
  (* error *)  q := (q OR r);
               r := r;
               r := ((~ (1223 >= (+ y))) OR (((- y) * 2) # 0))
END Test18.